#16 Fixed bugs with missing main image, image overflow and invalid div elements in the news content when providing news with EuropeNewsProvider

--- a/Newsweek/Web/Newsweek.Web/wwwroot/css/get-news.css
+++ b/Newsweek/Web/Newsweek.Web/wwwroot/css/get-news.css
@@ -1,4 +1,8 @@
-﻿.card-text {
+﻿.widgetImage__image {
+    width: 100%;
+}
+
+.card-text {
     margin-bottom: 10px;
 }
 
@@ -93,5 +97,4 @@
 
 #existingComments .card {
     margin-top: 10px;
-    
 }
